236_237-ingress+cheatsheet/236-vprodep.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  selector:
    matchLabels:
      run: my-app
  replicas: 1
  template:
    metadata:
      labels:
        run: my-app
    spec:
      containers:
        - name: my-app
          image: imranvisualpath/vproappfix
          # image: azrubael/vprofileapp
          ports:
            - containerPort: 8080
