236_237-ingress+cheatsheet/237-nginx-deploy-autogenerate.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-depl
  name: nginx-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-depl
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-depl
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
